<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.norule</groupId>
    <artifactId>discord-music-bot</artifactId>
    <version>1.6</version>
    <name>discord-music-bot</name>
    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <external.lib.dir>${project.basedir}/lib</external.lib.dir>
        <jda.version>6.3.1</jda.version>
        <lavaplayer.version>2.2.6</lavaplayer.version>
        <youtube.source.version>1.18.0</youtube.source.version>
        <lavasrc.version>4.8.1</lavasrc.version>
        <libdave.version>0.1.0</libdave.version>
        <snakeyaml.version>2.4</snakeyaml.version>
        <slf4j.version>2.0.17</slf4j.version>
    </properties>

    <repositories>
        <repository>
            <id>lavalink-releases</id>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
        <repository>
            <id>topiwtf-releases</id>
            <url>https://maven.topi.wtf/releases</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.arbjerg</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>${lavaplayer.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.lavalink.youtube</groupId>
            <artifactId>v2</artifactId>
            <version>${youtube.source.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.topi314.lavasrc</groupId>
            <artifactId>lavasrc</artifactId>
            <version>${lavasrc.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.50.3.0</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>adapter-jda</artifactId>
            <version>${libdave.version}</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>impl-jni</artifactId>
            <version>${libdave.version}</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-win-x86-64</artifactId>
            <version>${libdave.version}</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-linux-x86-64</artifactId>
            <version>${libdave.version}</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-linux-aarch64</artifactId>
            <version>${libdave.version}</version>
        </dependency>

        <dependency>
            <groupId>moe.kyokobot.libdave</groupId>
            <artifactId>natives-linux-musl-x86-64</artifactId>
            <version>${libdave.version}</version>
        </dependency>
            <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>web/_legacy/**</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>../lib/</classpathPrefix>
                            <mainClass>com.norule.musicbot.bootstrap.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>copy-runtime-dependencies-to-lib</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${external.lib.dir}</outputDirectory>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                        </configuration>
                    </execution>
                    <execution>
                        <id>write-runtime-dependency-index</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>list</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputFile>${project.build.outputDirectory}/bootstrap/runtime-dependencies.txt</outputFile>
                            <appendOutput>false</appendOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <mainClass>com.norule.musicbot.bootstrap.Main</mainClass>
                </configuration>
            </plugin>
                    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>web-build</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <id>web-npm-install</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <workingDirectory>${project.basedir}/web</workingDirectory>
                                    <executable>npm</executable>
                                    <arguments>
                                        <argument>install</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>web-npm-build</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <workingDirectory>${project.basedir}/web</workingDirectory>
                                    <executable>npm</executable>
                                    <arguments>
                                        <argument>run</argument>
                                        <argument>build</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
            </build>
        </profile>
    </profiles>
</project>

